# telegram-channel-analysis

./: .gitignore  README.md  pyproject.toml
backend/: api.py  helper.py  main.py
osn_scrap/: helper.py  main.py  schemas.py
