[tool.poetry]
name = "osn-scrap"
version = "0.1.0"
description = ""
authors = ["AuriantEmeric <auriantemeric@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
lxml = "^4.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
